# micrograd

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/micrograd/: __init__.py  value.py
tests/unit/: test_value.py
