[project]
name = "micrograd"
version = "0.1.0"
description = "An Implementation of micrograd based on Andrej Karpathy's Youtube lecture."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Putu Ravindra Wiguna", email = "ravindrawiguna@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyrefly>=0.54.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
